# hw12_13_14_15_16_calendar/internal/server/grpc/event.go
@@ -84,23 +84,25 @@ func protoToDomain(e *api.Event) domain.Event {
 		return domain.Event{}
 	}
 	return domain.Event{
-		ID:          e.Id,
-		Title:       e.Title,
-		Description: e.Description,
-		StartAt:     e.StartAt.AsTime(),
-		EndAt:       e.EndAt.AsTime(),
-		UserID:      e.UserId,
+		ID:           e.Id,
+		Title:        e.Title,
+		Description:  e.Description,
+		StartAt:      e.StartAt.AsTime(),
+		EndAt:        e.EndAt.AsTime(),
+		UserID:       e.UserId,
+		RemindBefore: e.RemindBefore,
 	}
 }
 
 func domainToProto(e domain.Event) *api.Event {
 	return &api.Event{
-		Id:          e.ID,
-		Title:       e.Title,
-		Description: e.Description,
-		StartAt:     timestamppb.New(e.StartAt),
-		EndAt:       timestamppb.New(e.EndAt),
-		UserId:      e.UserID,
+		Id:           e.ID,
+		Title:        e.Title,
+		Description:  e.Description,
+		StartAt:      timestamppb.New(e.StartAt),
+		EndAt:        timestamppb.New(e.EndAt),
+		UserId:       e.UserID,
+		RemindBefore: e.RemindBefore,
 	}
 }
 
