# hw12_13_14_15_16_calendar/pkg/api/EventService.swagger.json
@@ -158,6 +158,10 @@
                 },
                 "userId": {
                   "type": "string"
+                },
+                "remindBefore": {
+                  "type": "string",
+                  "format": "int64"
                 }
               }
             }
@@ -252,6 +256,10 @@
         },
         "userId": {
           "type": "string"
+        },
+        "remindBefore": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
